--- a/src/app/modules/dashboard/mco-dashborad/mco-dashborad.component.html
+++ b/src/app/modules/dashboard/mco-dashborad/mco-dashborad.component.html
@@ -1,57 +1,59 @@
-<div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-    <div class="text-4xl font-extrabold tracking-tight mx-10 mt-4">MCO Dashboard</div>
+<div class="px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+    <div class="heading">MCO Dashboard</div>
     <!-- Header -->
-    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-4 px-6 md:px-8">
+    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between px-6 md:px-8">
   
     </div>
   
     <!-- Main -->
-    <div class="flex flex-auto overflow-y-scroll">
+    <div class="flex flex-auto overflow-x-hidden overflow-y-scroll">
   
       <!-- Products list -->
-      <div class="flex flex-auto overflow-y-scroll mx-10" style="flex-direction: column;">
+      <div class="flex flex-auto overflow-x-hidden overflow-y-scroll" style="flex-direction: column;">
       <div class="row">
           <div  class="col-4">
-            <div id="chart">
+            <p class="text-green px-2 py-2 font-bold mb-0 mt-4">Performance Indicators</p>
+            <div id="chart" class="mt-0">
                 <apx-chart
-                  [series]="chartOptions.series"
-                  [chart]="chartOptions.chart"
-                  [labels]="chartOptions.labels"
-                  [title]="chartOptions.title"
-                  [theme]="chartOptions.theme"
-                  [responsive]="chartOptions.responsive"
+                  [series]="chartOptions1.series"
+                  [chart]="chartOptions1.chart"
+                  [labels]="chartOptions1.labels"
+                  [theme]="chartOptions1.theme"
+                  [responsive]="chartOptions1.responsive"
                 ></apx-chart>
               </div>
           </div>
           <div  class="col-4">
-            <div id="chart">
+            <p class="text-green px-2 py-2 font-bold mb-0 mt-4">Circle Bench Mark</p>
+            <div id="chart" class="mt-0">
                 <apx-chart
-                  [series]="chartOptions.series"
-                  [chart]="chartOptions.chart"
-                  [labels]="chartOptions.labels"
-                  [title]="chartOptions.title"
-                  [theme]="chartOptions.theme"
-                  [responsive]="chartOptions.responsive"
+                  [series]="chartOptions2.series"
+                  [chart]="chartOptions2.chart"
+                  [labels]="chartOptions2.labels"
+                  [theme]="chartOptions2.theme"
+                  [responsive]="chartOptions2.responsive"
                 ></apx-chart>
               </div>
           </div>
           <div  class="col-4">
-            <div id="chart">
+            <p class="text-green px-2 py-2 font-bold mb-0 mt-4">Loan Portfolio</p>
+            <div id="chart"  class="mt-0">
                 <apx-chart
-                  [series]="chartOptions.series"
-                  [chart]="chartOptions.chart"
-                  [labels]="chartOptions.labels"
-                  [title]="chartOptions.title"
-                  [theme]="chartOptions.theme"
-                  [responsive]="chartOptions.responsive"
+                  [series]="chartOptions3.series"
+                  [chart]="chartOptions3.chart"
+                  [labels]="chartOptions3.labels"
+                  [theme]="chartOptions3.theme"
+                  [responsive]="chartOptions3.responsive"
                 ></apx-chart>
               </div>
           </div>
-          <div  class="col-4">
-            <table class="table">
-                <caption>List of users</caption>
+        </div>
+        <div class="row ">
+          <div  class="col-lg-4 table-responsive">
+            <p class="heading">Disbursement</p>
+            <table class="table  table-striped">
                 <thead>
-                  <tr>
+                  <tr class="table-header-background">
                     <th scope="col">#</th>
                     <th scope="col">First</th>
                     <th scope="col">Last</th>
@@ -76,11 +78,11 @@
                 </tbody>
               </table>
           </div>
-          <div  class="col-4">
-            <table class="table">
-                <caption>List of users</caption>
+          <div  class="col-lg-4  table-responsive">
+            <p class="heading">Recovery</p>
+            <table class="table  table-striped">
                 <thead>
-                  <tr>
+                  <tr class="table-header-background">
                     <th scope="col">#</th>
                     <th scope="col">First</th>
                     <th scope="col">Last</th>
@@ -105,11 +107,11 @@
                 </tbody>
               </table>
           </div>
-          <div  class="col-4">
-            <table class="table">
-                <caption>List of users</caption>
+          <div  class="col-lg-4   table-responsive">
+            <p class="heading">Utilization/Mutations</p>
+            <table class="table  table-striped">
                 <thead>
-                  <tr>
+                  <tr class="table-header-background">
                     <th scope="col">#</th>
                     <th scope="col">First</th>
                     <th scope="col">Last</th>
@@ -133,6 +135,7 @@
                   </tr>
                 </tbody>
               </table>
+          </div>
           </div>
       </div>
    
