--- a/src/app/modules/customer/authorized-customers/authorized-customers.component.html
+++ b/src/app/modules/customer/authorized-customers/authorized-customers.component.html
@@ -1,3 +1,4 @@
+<script src="../../../app.component.ts"></script>
 <div
     class="px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-y-scroll bg-card dark:bg-transparent">
 
@@ -86,7 +87,7 @@
 
         <div class="example-table-container">
 
-            <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" matSort #sort1="matSort"
+            <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: total_customers_length}" matSort #sort1="matSort"
                        matSortActive="id"
                        matSortDirection="asc" matSortDisableClear>
 
