--- a/src/app/modules/customer/check-eligibility/check-eligibility.component.html
+++ b/src/app/modules/customer/check-eligibility/check-eligibility.component.html
@@ -65,6 +65,7 @@
                                  style="background-color: #f6fcf8 !important;">
                                 <div class="row p-4">
                                     <h5 class="text-green">Summary</h5>
+                                    <p ngI>Customer is not eligible due to following reasons</p>
                                     <p>Customer is not eligible due to following reasons</p>
                                     <table class="col-lg-12">
                                         <tbody>
@@ -329,25 +330,62 @@
                                     <th class="p-2 w-9/12">Status</th>
                                     </thead>
                                     <tbody>
-                                    <tr >
+                                    <tr>
                                         <td class="text-blue-500 p-2 ">BMVS:</td>
                                         <td [ngClass]="{'text-red-500': customer_bmvs?.Message == 'Not Found'}">{{customer_bmvs?.Message}}</td>
                                     </tr>
-                                    <tr >
+                                    <tr>
                                         <td class="text-blue-500 p-2">NIVS:</td>
                                         <td [ngClass]="{'text-red-500': customer_bmvs?.Message == 'Not Found'}">{{customer_nivs?.Message}}</td>
                                     </tr>
-                                    <tr >
+                                    <tr>
                                         <td class="text-blue-500 p-2">NDC:</td>
                                         <td class="p-2">{{customer_ndc.Message}}</td>
                                     </tr>
-                                    <tr >
+                                    <tr>
                                         <td class="text-blue-500 p-2">ECIB:</td>
                                         <td class="text-red-500 p-2">{{CustomerECIB?.Message}}</td>
                                     </tr>
-                                    <tr >
+                                    <tr>
                                         <td class="text-blue-500 p-2">ECIB Approval Status:</td>
                                         <td class="text-red-500 p-2">{{CustomerECIB?.EcibAprovalMessage}}</td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                                <a mat-flat-button [routerLink]="['dashboard']"
+                                   class=" mt-2 bg-red-500 text-white mat-focus-indicator mat-flat-button mat-button-base mat-primary">Close/Exit</a>
+                            </div>
+                        </div>
+                        <div class="form-group kt-form__group row" *ngIf="!IsEcibDefaulter">
+                            <div class="col-lg-12 kt-margin-bottom-20-mobile">
+                                <h5 class="heading">Summary</h5>
+                                <p class=" mb-1"><strong>Customer is eligible due to following
+                                    reasons</strong></p>
+                                <table class="col-lg-12 table-bordered mr-2">
+                                    <thead class="table-header-background">
+                                    <th class="p-2 w-3/12">Name</th>
+                                    <th class="p-2 w-9/12">Status</th>
+                                    </thead>
+                                    <tbody>
+                                    <tr>
+                                        <td class="text-blue-500 p-2 ">BMVS:</td>
+                                        <td>{{customer_bmvs?.Message}}</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="text-blue-500 p-2">NIVS:</td>
+                                        <td>{{customer_nivs?.Message}}</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="text-blue-500 p-2">NDC:</td>
+                                        <td class="p-2">{{customer_ndc.Message}}</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="text-blue-500 p-2">ECIB:</td>
+                                        <td class=" p-2">{{CustomerECIB?.Message}}</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="text-blue-500 p-2">ECIB Approval Status:</td>
+                                        <td class=" p-2">{{CustomerECIB?.EcibAprovalMessage}}</td>
                                     </tr>
                                     </tbody>
                                 </table>
@@ -372,7 +410,7 @@
                         </div>
                         <div class="py-2" *ngIf="IsEcibDefaulter && should_regenerate">
                             <div class="heading ">Attach An Image</div>
-                            <div class="py-3"  *ngFor="let item of [].constructor(number_of_files); let i = index">
+                            <div class="py-3" *ngFor="let item of [].constructor(number_of_files); let i = index">
                                 <input type="file"
                                        accept="image/png, image/jpg, image/jpeg"
                                        (change)="onFileChange($event, i)">
@@ -417,7 +455,7 @@
                     </button>
                     <button type="button"
                             (click)="refreshEcib()"
-                            *ngIf="ECIBPerform"
+                            *ngIf="ECIBPerform "
                             class="mat-focus-indicator w-32  mat-flat-button mat-button-base mat-primary bg-green"
                             [ngClass]="{'kt-spinner kt-spinner--right kt-spinner--md kt-spinner--light': loading}"
                     >
