--- a/src/app/modules/dashboard/mco-dashborad/mco-dashborad.component.html
+++ b/src/app/modules/dashboard/mco-dashborad/mco-dashborad.component.html
@@ -1,4 +1,4 @@
-<div class="px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+<div class="px-10 pt-3 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
     <div class="heading">MCO Dashboard</div>
     <!-- Header -->
     <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between px-6 md:px-8">
@@ -11,7 +11,7 @@
       <!-- Products list -->
       <div class="flex flex-auto overflow-x-hidden overflow-y-scroll" style="flex-direction: column;">
       <div class="row">
-          <div  class="col-4">
+          <div  class="col-lg-4">
             <p class="text-green px-2 py-2 font-bold mb-0 mt-4">Performance Indicators</p>
             <div id="chart" class="mt-0">
                 <apx-chart
@@ -23,7 +23,7 @@
                 ></apx-chart>
               </div>
           </div>
-          <div  class="col-4">
+          <div  class="col-lg-4">
             <p class="text-green px-2 py-2 font-bold mb-0 mt-4">Circle Bench Mark</p>
             <div id="chart" class="mt-0">
                 <apx-chart
@@ -35,7 +35,7 @@
                 ></apx-chart>
               </div>
           </div>
-          <div  class="col-4">
+          <div  class="col-lg-4">
             <p class="text-green px-2 py-2 font-bold mb-0 mt-4">Loan Portfolio</p>
             <div id="chart"  class="mt-0">
                 <apx-chart
