--- a/src/app/modules/dashboard/branch-manager-dashboard/branch-manager-dashboard.component.html
+++ b/src/app/modules/dashboard/branch-manager-dashboard/branch-manager-dashboard.component.html
@@ -1,37 +1,40 @@
-<div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-    <div class="text-4xl font-extrabold tracking-tight mx-10 mt-4">Branch Manager</div>
+<div class="px-10 pt-3 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+    <div class="heading">Branch Manager</div>
     <!-- Header -->
-    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-4 px-6 md:px-8">
-  
-    </div>
-    <div class="example-container">
-        <form [formGroup]="options">
-            <mat-form-field appearance="fill">
-                <mat-label>Date</mat-label>
-                <input matInput [matDatepicker]="picker">
-               
-                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
-              </mat-form-field>
-      
-          <mat-form-field appearance="fill" [floatLabel]="floatLabelControl.value">
-            <mat-label>Branch Name</mat-label>
-            <input matInput placeholder="Enter Branch Name">
-          </mat-form-field>
-      
-          <mat-form-field appearance="fill" [floatLabel]="floatLabelControl.value">
-            <mat-label>Zone Name</mat-label>
-            <input matInput placeholder="Enter Zone Name">
-          </mat-form-field>
-        </form>
+    <form [formGroup]="options">
+    <div class="row py-2">
+
+          <div class="col-lg-4">
+            <mat-form-field  class="w-full" appearance="outline">
+              <mat-label>Date</mat-label>
+              <input matInput [matDatepicker]="picker">
+             
+              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+              <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
+          </div>
+          <div class="col-lg-4">
+            <mat-form-field class="w-full" appearance="outline" [floatLabel]="floatLabelControl.value">
+              <mat-label>Branch Name</mat-label>
+              <input matInput placeholder="Enter Branch Name">
+            </mat-form-field>
+          </div>
+          <div class="col-lg-4">
+            <mat-form-field  class="w-full" appearance="outline" [floatLabel]="floatLabelControl.value">
+              <mat-label>Zone Name</mat-label>
+              <input matInput placeholder="Enter Zone Name">
+            </mat-form-field>
+          </div>
+
       </div>
+    </form>
     <!-- Main -->
     <div class="flex flex-auto overflow-y-scroll">
   
       <!-- Products list -->
-      <div class="flex flex-auto overflow-y-scroll mx-10" style="flex-direction: column;">
+      <div class="flex flex-auto overflow-x-hidden overflow-y-scroll" style="flex-direction: column;">
       <div class="row">
-          <div  class="col-4">
+          <div  class="col-lg-4">
             <div id="chart">
                 <apx-chart
                   [series]="chartOptions.series"
@@ -43,7 +46,7 @@
                 ></apx-chart>
               </div>
           </div>
-          <div  class="col-4">
+          <div  class="col-lg-4">
             <div id="chart">
                 <apx-chart
                   [series]="chartOptions.series"
@@ -55,7 +58,7 @@
                 ></apx-chart>
               </div>
           </div>
-          <div  class="col-4">
+          <div  class="col-lg-4">
             <div id="chart">
                 <apx-chart
                   [series]="chartOptions.series"
@@ -67,16 +70,23 @@
                 ></apx-chart>
               </div>
           </div>
-          <div  class="col-4">
-            <table class="table">
-                <label>Disbursements</label>
+          </div>
+          <div class="row">          
+            <div  class="col-lg-12 table-responsive">
+              <p class="heading">
+                Disbursements
+              </p>
+            <table class="table  table-striped">
+              <thead>
+                <tr class="table-header-background text-white">
+                  <th >Calendar Year Target</th>
+                  <th>Achievement</th>
+                  <th>%age</th>
+                </tr>
+              </thead>
           
                 <tbody>
-                          <tr>
-                            <th scope="row">Calendar Year Target</th>
-                            <td>Achievement</td>
-                            <td>%age</td>
-                          </tr>
+
                      
                       
                           <tr>
