--- a/src/app/modules/dashboard/branch-manager-dashboard/branch-manager-dashboard.component.scss
+++ b/src/app/modules/dashboard/branch-manager-dashboard/branch-manager-dashboard.component.scss
@@ -1,22 +1,8 @@
 #chart {
-    max-width: 380px;
-    margin: 35px auto;
-    padding: 0;
-  }
-
-  .example-container .mat-form-field + .mat-form-field {
-    margin-left: 8px;
-  }
-  
-  .example-container .mat-form-field {
-    width: 220px;
-  }
-  
-  .example-container form {
-    margin-bottom: 20px;
-  }
-  
-  .example-container form > * {
-    margin: 5px 0;
-  }
-  
+  max-width: 380px;
+  padding: 0;
+}
+.table td, .table th {
+  font-size: 14px;
+  vertical-align: middle;
+}
