--- a/src/app/modules/dashboard/recovery-officer-dashboard/recovery-officer-dashboard.component.html
+++ b/src/app/modules/dashboard/recovery-officer-dashboard/recovery-officer-dashboard.component.html
@@ -1,17 +1,14 @@
-<div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-    <div class="text-4xl font-extrabold tracking-tight mx-10 mt-4">Recovery Officer</div>
+<div class="px-10 pt-3 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+    <div class="heading">Recovery Officer</div>
     <!-- Header -->
-    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-4 px-6 md:px-8">
-  
-    </div>
   
     <!-- Main -->
-    <div class="flex flex-auto overflow-y-scroll">
+    <div class="flex flex-auto overflow-x-hidden overflow-y-scroll">
   
       <!-- Products list -->
-      <div class="flex flex-auto overflow-y-scroll mx-10" style="flex-direction: column;">
-      <div class="">
-          <div  class="row">
+      <div class="flex flex-auto overflow-x-hidden overflow-y-scroll" style="flex-direction: column;">
+      <div class="row">
+          <div  class="col-lg-6">
             <div id="chart">
                 <apx-chart
                   [series]="chartOptions.series"
@@ -23,14 +20,27 @@
                 ></apx-chart>
               </div>
           </div>
+          <div  class="col-lg-6">
+            <div id="chart">
+                <apx-chart
+                  [series]="chartOptions.series"
+                  [chart]="chartOptions.chart"
+                  [labels]="chartOptions.labels"
+                  [title]="chartOptions.title"
+                  [theme]="chartOptions.theme"
+                  [responsive]="chartOptions.responsive"
+                ></apx-chart>
+              </div>
+          </div>
+          </div>
           <div  class="row  justify-content-md-center">
-            <label>Recovery</label>
-              <div class="col-8">
-               
-            <table class="table">
+           
+              <div class="col-lg-6 table-responsive">
+                <p class="heading">Recovery</p>
+            <table class="table  table-striped">
               
                 <thead>
-                  <tr>
+                  <tr class="table-header-background">
                     <th scope="col">Calendar Year Target</th>
                     <th scope="col">Achievement</th>
                     <th scope="col">%age</th>
@@ -55,35 +65,22 @@
                 </tbody>
               </table>
           </div>     
-        </div>    
-      </div>
-      <div  class="row justify-content-md-center">
-        <label>Circle Wise within Allocated Branches</label>
-          <div class="col-8 text-center">
-           
-        <table class="table">
+          <div class="col-lg-6 table-responsive">
+            <p class="heading">Circle Wise within Allocated Branches</p>
+            <table class="table  table-striped">
             
-            <thead>
-                <tr>
-                <th scope="col">Branch</th>
-                <th scope="col">Disbursement</th>
-                <th scope="col">Recovery</th>
-                <th scope="col">NPL</th>
-                <th scope="col">SAM</th>
-                <th scope="col">Outstanding</th>
-              </tr>
-            </thead>
-            <tbody>
-                <tr>
-               
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
+              <thead>
+                  <tr class="table-header-background">
+                  <th scope="col">Branch</th>
+                  <th scope="col">Disbursement</th>
+                  <th scope="col">Recovery</th>
+                  <th scope="col">NPL</th>
+                  <th scope="col">SAM</th>
+                  <th scope="col">Outstanding</th>
                 </tr>
-                <tr>
+              </thead>
+              <tbody>
+                  <tr>
                  
                     <td></td>
                     <td></td>
@@ -91,51 +88,61 @@
                     <td></td>
                     <td></td>
                     <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-              </tbody>
-            </table>
-        </div>
-    </div>
+                  </tr>
+                  <tr>
+                   
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                  </tr>
+                  <tr>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                  </tr>
+                  <tr>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                  </tr>
+                  <tr>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                  </tr>
+                  <tr>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                  </tr>
+                  <tr>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                      <td></td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+        </div>   
+
     </div>
 
     </div>
