--- a/src/app/modules/notification/notification-page/notification-page.component.html
+++ b/src/app/modules/notification/notification-page/notification-page.component.html
@@ -20,8 +20,9 @@
 
     <div class="col-lg-12 row ml-1  mt-2 justify-content-center text-center bg-gray-50  py-4">
         <div class="col-lg-4 col-sm-12">
-            <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
-                      id="llcInquiryText">
+            <mat-card  class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
+                      id="llcInquiryText" >
+                <count [count]="n1"></count>
                 <div class="d-grid" style="justify-items: center;">
 <!--                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>-->
                     <p class="text-md text-black">Recovery Collection Notifications</p>
@@ -32,6 +33,7 @@
         <div class="col-lg-4 col-sm-12">
             <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText">
+                <count [count]="n2"></count>
                 <div class="d-grid" style="justify-items: center;">
                     <!--                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>-->
                     <p class="text-md text-black">Due Payments/Installments</p>
@@ -42,6 +44,7 @@
         <div class="col-lg-4 col-sm-12">
             <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText">
+                <count [count]="n3"></count>
                 <div class="d-grid" style="justify-items: center;">
                     <!--                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>-->
                     <p class="text-md text-black">Possible Customer Leads</p>
@@ -54,6 +57,7 @@
         <div class="col-lg-4 col-sm-12">
             <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText">
+                <count [count]="n4"></count>
                 <div class="d-grid" style="justify-items: center;">
                     <p class="text-md text-black">Intimate the Loaner via Text</p>
                 </div>
@@ -63,6 +67,7 @@
         <div class="col-lg-4 col-sm-12">
             <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText">
+                <count [count]="n5"></count>
                 <div class="d-grid" style="justify-items: center;">
                     <p class="text-md text-black">Loaners/Defaulter</p>
                 </div>
@@ -72,6 +77,7 @@
         <div class="col-lg-4 col-sm-12">
             <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText">
+                <count [count]="n6"></count>
                 <div class="d-grid" style="justify-items: center;">
                     <p class="text-md text-black">Death of a Customer</p>
                 </div>
@@ -83,6 +89,7 @@
         <div class="col-lg-4 col-sm-12">
             <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText">
+                <count [count]="n7"></count>
                 <div class="d-grid" style="justify-items: center;">
                     <p class="text-md text-black">Cnic Expiry of Loaner</p>
                 </div>
@@ -92,6 +99,7 @@
         <div class="col-lg-4 col-sm-12">
             <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText">
+                <count [count]="n8"></count>
                 <div class="d-grid" style="justify-items: center;">
                     <p class="text-md text-black">Demand Notices</p>
                 </div>
@@ -101,6 +109,7 @@
         <div class="col-lg-4 col-sm-12">
             <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText">
+                <count [count]="n9"></count>
                 <div class="d-grid" style="justify-items: center;">
                     <p class="text-md text-black">Business Leads</p>
                 </div>
@@ -112,6 +121,7 @@
         <div class="col-lg-4 col-sm-12">
             <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText">
+                <count [count]="n10"></count>
                 <div class="d-grid" style="justify-items: center;">
                     <p class="text-md text-black">Upcoming Visits</p>
                 </div>
@@ -121,6 +131,7 @@
         <div class="col-lg-4 col-sm-12">
             <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText">
+                <count [count]="n11"></count>
                 <div class="d-grid" style="justify-items: center;">
                     <p class="text-md text-black">Loan Defaulters</p>
                 </div>
