--- a/src/app/modules/reports/ho-zonal-expense/ho-zonal-expense.component.html
+++ b/src/app/modules/reports/ho-zonal-expense/ho-zonal-expense.component.html
@@ -59,7 +59,7 @@
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label class="customMatLabel">Type<strong
                                             class="matMandatory">*</strong></mat-label>
-                                        <mat-select formControlName="Type">
+                                        <mat-select formControlName="TrCode">
                                             <mat-option *ngFor="let lov of instypeLov" [value]="lov.Value">
                                                 {{lov.Description}}
                                             </mat-option>
