--- a/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
+++ b/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
@@ -39,7 +39,7 @@
       <div class="flex flex-auto overflow-x-hidden overflow-y-scroll" style="flex-direction: column;">
       <div class="row">
           <div  class="col-lg-4">
-            <div id="chart">
+            <div id="chart" class="mt-0">
                 <apx-chart
                   [series]="chartOptions.series"
                   [chart]="chartOptions.chart"
@@ -51,7 +51,7 @@
               </div>
           </div>
           <div  class="col-lg-4">
-            <div id="chart">
+            <div id="chart" class="mt-0">
                 <apx-chart
                   [series]="chartOptions.series"
                   [chart]="chartOptions.chart"
@@ -63,7 +63,7 @@
               </div>
           </div>
           <div  class="col-lg-4">
-            <div id="chart">
+            <div id="chart" class="mt-0">
                 <apx-chart
                   [series]="chartOptions.series"
                   [chart]="chartOptions.chart"
@@ -106,42 +106,44 @@
                   </tbody>
                 </table> 
               </div>
+              <div class="col-lg-6 table-responsive">
+                <p class="heading">Recovery</p>
+                      <table class="table table-striped">
+                        <thead>
+                          <tr class="table-header-background">
+                            <th scope="col">Calendar Year Target</th>
+                            <th scope="col">Achievement</th>
+                            <th scope="col">%age</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <th scope="row">Fiscsal year Target</th>
+                            <td>Achievement</td>
+                            <td>%age</td>
+                          </tr>
+                          <tr>
+                            <th scope="row">Calendar Year Target Corresponding Period</th>
+                            <td>Achievement</td>
+                            <td>%age</td>
+                          </tr>
+                          <tr>
+                            <th scope="row">Fiscsal year Target Corresponding Period</th>
+                            <td>Achievement</td>
+                            <td>%age</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                            </div>  
             </div>
 
-            <div class="col-lg-6 table-responsive">
-              <p class="heading">Recovery</p>
+                <div class="row">
+                <div  class="col-lg-12 table-responsive">
+                  <p class="heading">Circle Wise within Allocated Branches</p>
                     <table class="table table-striped">
-                      <thead>
-                        <tr class="table-header-background">
-                          <th scope="col">Calendar Year Target</th>
-                          <th scope="col">Achievement</th>
-                          <th scope="col">%age</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <th scope="row">Fiscsal year Target</th>
-                          <td>Achievement</td>
-                          <td>%age</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">Calendar Year Target Corresponding Period</th>
-                          <td>Achievement</td>
-                          <td>%age</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">Fiscsal year Target Corresponding Period</th>
-                          <td>Achievement</td>
-                          <td>%age</td>
-                        </tr>
-                      </tbody>
-                    </table>
-                          </div>  
-                <div  class="col-4">
-                    <table class="table">
-                        <caption>Circle Wise within Allocated Branches</caption>
+                        
                         <thead>
-                            <tr>
+                            <tr class="table-header-background" >
                             <th scope="col">Branch</th>
                             <th scope="col">Disbursement</th>
                             <th scope="col">Recovery</th>
@@ -162,6 +164,9 @@
                               <td></td>
                               <td></td>
                               <td></td>
+                              <td></td>
+                              <td></td>
+                              <td></td>
                             </tr>
                             <tr>
                              
@@ -171,11 +176,6 @@
                                 <td></td>
                                 <td></td>
                                 <td></td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                                <td></td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
@@ -184,11 +184,6 @@
                                 <td></td>
                                 <td></td>
                                 <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                            <tr>
                                 <td></td>
                                 <td></td>
                                 <td></td>
@@ -203,18 +198,15 @@
                                 <td></td>
                                 <td></td>
                                 <td></td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                                <td></td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
                             </tr>
                             <tr>
-                             
-                                <td></td>
+                              <td></td>
+                              <td></td>
+                              <td></td>
+                              <td></td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
@@ -222,8 +214,10 @@
                                 <td></td>
                             </tr>
                             <tr>
-                             
-                                <td></td>
+                              <td></td>
+                              <td></td>
+                              <td></td>
+                              <td></td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
@@ -231,8 +225,43 @@
                                 <td></td>
                             </tr>
                             <tr>
-                             
+                              <td></td>
+                              <td></td>
+                              <td></td>
+                              <td></td>
                                 <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                              <td></td>
+                              <td></td>
+                              <td></td>
+                              <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                              <td></td>
+                              <td></td>
+                              <td></td>
+                              <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                              <td></td>
+                              <td></td>
+                              <td></td>
+                              <td></td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
@@ -242,6 +271,7 @@
                           </tbody>
                         </table>
                     </div>
+                  </div>
                 </div>
             </div>
         </div>
