--- a/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
+++ b/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
@@ -19,7 +19,7 @@
 
     <!-- Header -->
 
-
+    <div class="flex-inline flex-column">
     <div class="collapse show" id="collapseExample">
         <div class="card card-body">
             <div class="flex" style="flex-wrap: wrap;" [formGroup]="utilizationSearch">
@@ -67,6 +67,7 @@
 
         </div>
 
+    </div>
     </div>
 
 
