--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -23,7 +23,7 @@
          <p></p>
          <div class="overlay" *ngIf="popup">
              <div class="popup">
-                 <h2 class="heading">Here i am</h2>
+                 <h2 class="heading">Session Expire ! </h2>
                  <a class="close text-red-500" (click)="popup = false">&times;</a>
                  <div class="content my-4">
                   <p>Your Session is going to expire within {{time}}; Seconds.</p>
@@ -31,15 +31,16 @@
                  </div>
                  <div class="row text-right">
                     <div class="col-lg-12">
-                        <button type="button" class="btn btn-primary bg-green" mat-raised-button color="primary"
+                        <button type="button" (click)="RefreshToken()" class="btn btn-primary bg-green" mat-raised-button color="primary"
                                 >
                             <mat-icon class="mr-2">refresh</mat-icon>
                             Refresh
                         </button>
     
                         &nbsp;
-                        <button type="button" class="btn btn-primary bg-red-500" mat-raised-button color="primary">
+                        <button type="button" (click)="Logout()" class="btn btn-primary bg-red-500" mat-raised-button color="primary">
                             <mat-icon class="mr-2">cancel</mat-icon>
+
                             Cancel
                         </button>
                     </div>
