--- a/src/app/layout/layouts/vertical/classic/classic.component.html
+++ b/src/app/layout/layouts/vertical/classic/classic.component.html
@@ -60,7 +60,7 @@
 
             <mapping-request></mapping-request>
 
-            <notification></notification>
+            <notification *ngIf="userInfo[0].GroupName == 'MAKER'"></notification>
 
             <!-- <notifications></notifications> -->
 
