--- a/src/app/modules/reports/daily-voucher-proof/daily-voucher-proof.component.html
+++ b/src/app/modules/reports/daily-voucher-proof/daily-voucher-proof.component.html
@@ -3,7 +3,7 @@
         <div class="kt-portlet__head kt-portlet__head__custom" id="list-header"
              style="display: flex;flex-direction: row;justify-content: space-between; margin-bottom: 10px;">
             <div class="kt-portlet__head-label flex w-full">
-                <h3 class="heading w-11/12">Daily Vouchers Proof List</h3>
+                <h3 class="heading w-11/12">Daily Voucher Printing</h3>
                 <button class="text-end w-1/12" (click)="close(0)">
                     <mat-icon class="ml-2 text-white  p-3   bg-danger rounded-md">close</mat-icon>
                 </button>
