--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -114,22 +114,13 @@
         </div>
 
         <div class="col-lg-4 col-sm-12">
-            <!-- <mat-accordion>
-                <mat-expansion-panel hideToggle>
-                    <mat-expansion-panel-header>
-                        <mat-panel-title class="text-center">
-                            Early warning reports for MCOs
-                        </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    <early-warning-reports></early-warning-reports>
-                </mat-expansion-panel>
-            </mat-accordion> -->
+
             <mat-card routerLink="early-warning-reports"
                       class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText">
                 <div class="d-grid" style="justify-items: center;">
                     <mat-icon class="mb-2 text-green">file_copy</mat-icon>
-                    <p class="text-md text-black">Early warning reports for MCOs</p>
+                    <p class="text-md text-black">Early warning reports for Due Installments</p>
                 </div>
             </mat-card>
         </div>
@@ -170,7 +161,7 @@
                 <div class="d-grid" style="justify-items: center;">
                     <mat-icon class="mb-2 text-green">file_copy</mat-icon>
                     <p class="text-md text-black"
-                    >Daily Vouchers Proof List</p>
+                    >Daily Voucher Printing</p>
                 </div>
             </mat-card>
         </div>
