--- a/src/app/modules/notification/notification-page/notification-page.component.html
+++ b/src/app/modules/notification/notification-page/notification-page.component.html
@@ -22,7 +22,7 @@
         <div class="col-lg-4 col-sm-12">
             <mat-card  class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText" >
-                <count [count]="n1"></count>
+                <count [count]="nRcn" *ngIf="nRcn  != undefined"></count>
                 <div class="d-grid" style="justify-items: center;">
 <!--                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>-->
                     <p class="text-md text-black">Recovery Collection Notifications</p>
@@ -32,8 +32,8 @@
 
         <div class="col-lg-4 col-sm-12">
             <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
-                      id="llcInquiryText">
-                <count [count]="n2"></count>
+                      id="llcInquiryText" (click)="click(2)">
+                <count [count]="nDpi" *ngIf="nDpi  != undefined" ></count>
                 <div class="d-grid" style="justify-items: center;">
                     <!--                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>-->
                     <p class="text-md text-black">Due Payments/Installments</p>
@@ -44,7 +44,7 @@
         <div class="col-lg-4 col-sm-12">
             <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText">
-                <count [count]="n3"></count>
+                <count [count]="nPcl" *ngIf="nPcl  != undefined"></count>
                 <div class="d-grid" style="justify-items: center;">
                     <!--                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>-->
                     <p class="text-md text-black">Possible Customer Leads</p>
@@ -57,7 +57,7 @@
         <div class="col-lg-4 col-sm-12">
             <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText">
-                <count [count]="n4"></count>
+                <count [count]="nIlt" *ngIf="nIlt  != undefined"></count>
                 <div class="d-grid" style="justify-items: center;">
                     <p class="text-md text-black">Intimate the Loaner via Text</p>
                 </div>
@@ -66,8 +66,8 @@
 
         <div class="col-lg-4 col-sm-12">
             <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
-                      id="llcInquiryText">
-                <count [count]="n5"></count>
+                      id="llcInquiryText" (click)="click(5)">
+                <count [count]="nLd" *ngIf="nLd  != undefined"></count>
                 <div class="d-grid" style="justify-items: center;">
                     <p class="text-md text-black">Loaners/Defaulter</p>
                 </div>
@@ -77,7 +77,7 @@
         <div class="col-lg-4 col-sm-12">
             <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText">
-                <count [count]="n6"></count>
+                <count [count]="nDc" *ngIf="nDc  != undefined"></count>
                 <div class="d-grid" style="justify-items: center;">
                     <p class="text-md text-black">Death of a Customer</p>
                 </div>
@@ -88,8 +88,8 @@
     <div class="col-lg-12 row ml-1  mt-2 justify-content-center text-center bg-gray-50  py-4">
         <div class="col-lg-4 col-sm-12">
             <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
-                      id="llcInquiryText">
-                <count [count]="n7"></count>
+                      id="llcInquiryText" (click)="click(7)">
+                <count [count]="nCel" *ngIf="nCel  != undefined"></count>
                 <div class="d-grid" style="justify-items: center;">
                     <p class="text-md text-black">Cnic Expiry of Loaner</p>
                 </div>
@@ -99,7 +99,7 @@
         <div class="col-lg-4 col-sm-12">
             <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText">
-                <count [count]="n8"></count>
+                <count [count]="nDn" *ngIf="nDn  != undefined"></count>
                 <div class="d-grid" style="justify-items: center;">
                     <p class="text-md text-black">Demand Notices</p>
                 </div>
@@ -109,7 +109,7 @@
         <div class="col-lg-4 col-sm-12">
             <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText">
-                <count [count]="n9"></count>
+                <count [count]="nBl" *ngIf="nBl  != undefined"></count>
                 <div class="d-grid" style="justify-items: center;">
                     <p class="text-md text-black">Business Leads</p>
                 </div>
@@ -121,7 +121,7 @@
         <div class="col-lg-4 col-sm-12">
             <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText">
-                <count [count]="n10"></count>
+                <count [count]="nUv" *ngIf="nBl  != undefined"></count>
                 <div class="d-grid" style="justify-items: center;">
                     <p class="text-md text-black">Upcoming Visits</p>
                 </div>
@@ -131,7 +131,7 @@
         <div class="col-lg-4 col-sm-12">
             <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText">
-                <count [count]="n11"></count>
+                <count [count]="nLDef" *ngIf="nBl  != undefined"></count>
                 <div class="d-grid" style="justify-items: center;">
                     <p class="text-md text-black">Loan Defaulters</p>
                 </div>
