--- a/src/app/modules/notification/notification-page/notification-page.component.html
+++ b/src/app/modules/notification/notification-page/notification-page.component.html
@@ -140,7 +140,7 @@
                       id="llcInquiryText">
                 <count [count]="nUv" *ngIf="nBl  != undefined"></count>
                 <div class="d-grid" style="justify-items: center;">
-                    <img src="../../../../assets/images/ic_upcoming_visits.PNG" class="img-responsive center-block w-12 mx-auto mb-3"
+                    <img src="../../../../assets/images/ic_upcoming_visits.PNG" class="img-responsive center-block w-12 mx-auto mb-3">
 
                     <p class="text-md text-black">Upcoming Visits</p>
                 </div>
