--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -33,7 +33,7 @@
             <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText" routerLink="search-loan-case-by-cnic">
                 <div class="d-grid" style="justify-items: center;">
-                    <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
+                    <img src="../../../../assets/images/id-card.png" class="img-responsive center-block w-12 mx-auto mb-3">
                     
                     <p class="text-md text-black">Search
                         Loan Cases by CNIC</p>
